map not working

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
 PAYPAL_CLIENT_ID=AbJrXteTksC1Cc2kZXfU01enCJ7XNLCwsReXlZDb-NZn5RvMFWXLa9c__9oIKknzHIJK-KiFJgp0htHx
+GOOGLE_API_KEY=AIzaSyAKM_SWCAK0gY9LqJRxIIetRog1svOVeoo
