--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   },
   "homepage": "https://github.com/maya-salcedo/escooter-shop#readme",
   "dependencies": {
+    "aws-sdk": "^2.919.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
