--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
