--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
-    "socket.io": "^4.1.2",
-    "styled-components": "^5.3.0"
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
